--- a/TODO.txt
+++ b/TODO.txt
@@ -1,20 +1,12 @@
-index:
-set poster image for video
-change fonts and theme
-go over headers
-
-
 pandemic locations:
-- fix filter by population
 - after filter city doesn't show stats, only until press on map
 
 shop:
+filter is hidden by navbar
 change to apropriate products (masks, dildos, more masks)
 
-error:
-check to see error page
+login/register modals:
+fix ui
 
-other:
-change db context name (from fanpage...)
-
-admin login:
+manager: 
+change
